Added support for auth and login still bug on login

--- a/app/views/layouts/layout.handlebars
+++ b/app/views/layouts/layout.handlebars
@@ -6,21 +6,23 @@
 	<script src="/js/main.min.js" type="text/javascript" charset="utf-8" async defer></script>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href="/css/md-data-table.min.css" rel="stylesheet" type="text/css"/>
+	<link rel="stylesheet" type="text/css" href="/css/angular-toastr.min.css" />
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/index.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body ng-app="versionUpdater" ng-cloak layout="column">
-
+	{{#if error}}
+    <show-toast-error ng-show="false">{{error}}</show-toast-error>
+	{{/if}}
+	{{#if error_msg}}
+    <show-toast-error ng-show="false">{{error_msg}}</show-toast-error>
+	{{/if}}
+	{{#if success_msg}}
+		<show-toast-success ng-show="false">{{success_msg}}</show-toast-success>
+	{{/if}}
 	<div layout="column" layout-fill>
-		<md-toolbar class="top-toolbar" layout="row">
-			<h1 class="md-toolbar-tools" layout-align="left center">Version Upater Dashboard</h1>
-		</md-toolbar>
-    <md-content layout="column" class="content-wrapper md-padding" flex ng-controller="tableController">
-      {{{body}}}
-    </md-content>
-		<footer>
-			&copy; 2016 Sepulvju
-		</footer>
+		{{{body}}}
   </div>
 
 		<!-- Angular Material requires Angular.js Libraries -->
@@ -29,6 +31,8 @@
 	<script src="/js/angular-aria.min.js"></script>
 	<script src="/js/angular-messages.min.js"></script>
 	<script src="/js/md-data-table.min.js"></script>
+	<script src="/js/angular-toastr.min.js"></script>
+	<script src="/js/angular-toastr.tpls.min.js"></script>
 
 	<!-- Angular Material Library -->
 	<script src="/js/angular-material.min.js"></script>
